<resources>
    <string name="app_name">Comical</string>

    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>

    <string name="add">Add</string>

    <string name="title_activity_site_editor">SiteEditor</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_url">URL</string>
    <string name="favicon">Favicon</string>
    <string name="prompt_add">Add webcomic</string>
    <string name="prompt_update">Update webcomic</string>

    <string name="update_schedule">Update Schedule</string>
    <string name="dow_mon">Mon</string>
    <string name="dow_tue">Tue</string>
    <string name="dow_wed">Wed</string>
    <string name="dow_thu">Thu</string>
    <string name="dow_fri">Fri</string>
    <string name="dow_sat">Sat</string>
    <string name="dow_sun">Sun</string>

    <string name="orientation">Force Orientation</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="responsive">Responsive</string>
    <string name="backlog">Backlog</string>
    <string name="hiatus">Hiatus</string>
</resources>
