<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.linkybook.comical.views.SiteEditor">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/site_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/site_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_url"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/site_update_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_schedule"
            app:layout_constraintBottom_toTopOf="@id/site_orientation_group"
            app:layout_constraintEnd_toStartOf="@id/site_update_picker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/site_update_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/site_orientation_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/site_update_label"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dow_mon"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dow_mon" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dow_tue"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dow_tue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dow_wed"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dow_wed" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dow_thu"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dow_thu" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dow_fri"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dow_fri" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dow_sat"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dow_sat" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dow_sun"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dow_sun" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/site_orientation_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orientation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/site_orientation_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/site_update_picker" />

        <RadioGroup
            android:id="@+id/site_orientation_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/backlog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/site_orientation_label"
            app:layout_constraintTop_toBottomOf="@id/site_update_picker">

            <RadioButton
                android:id="@+id/site_orientation_responsive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/responsive" />

            <RadioButton
                android:id="@+id/site_orientation_landscape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landscape" />

            <RadioButton
                android:id="@+id/site_orientation_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portrait" />

        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/backlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backlog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/hiatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/site_orientation_group" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/hiatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiatus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hiatus"
            app:layout_constraintTop_toBottomOf="@+id/site_orientation_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/site_add_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prompt_add"
        android:textStyle="bold" />

</LinearLayout>
